# matchbox

./: .env.sample  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  alembic.ini  bm.ipynb  conda.lock.yml  docker-compose.datadog.yml  docker-compose.debug.yml  docker-compose.yml  eval.ipynb  justfile  load_data.py  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  sample.datasets.toml  sample.env  setup.cfg  setup.py  setup.sh  test.env  test.ipynb
.agents/: CLAUDE.md  GEMINI.md
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  codeql.yml  deploy-docker-image-to-packages-on-merge.yml  deploy-docker-image-to-packages-on-release.yml  deploy-docker-image-to-packages.yml  deploy-package-to-pypi.yml  docs-build-and-deploy.yml  docs-build.yml  docs-deploy.yml  docs.yml  prerelease.yml  pytest.yml  release.yml  ruff.yml  trufflehog.yml
.gitlab/merge_request_templates/: merge_template.md
alembic/: env.py
alembic/versions/: 1907c34cfa1f_create_tables_given_schema.py  40a8e5ed48f2_create_schema_without_tables.py
benchmark/: schema_setup.py
cmf/: __init__.py  admin.py  config.py  datasets.toml  datasets.yaml  locations.py
cmf/clean/: __init__.py  lib.py  utils.py
cmf/data/: __init__.py  clusters.py  data.py  datasets.py  db.py  dedupe.py  exceptions.py  link.py  make_eval.py  mixin.py  models.py  probabilities.py  results.py  star.py  table.py  utils.py  validation.py
cmf/dedupers/: __init__.py  make_deduper.py  naive.py
cmf/features/: clean_basic.py  clean_complex.py
cmf/helpers/: __init__.py  cleaner.py  comparison.py  deletion.py  selector.py  visualisation.py
cmf/link/: deterministic_linker.py  existingservice_linker.py  linker.py  model_utils.py  splink_linker.py
cmf/linkers/: __init__.py  deterministic.py  make_linker.py  splinklinker.py  weighteddeterministic.py
cmf/pipeline/: companieshouse_companies_x_hmrc_trade__exporters.py
data/: .gitignore
docs/: .eleventy.js  contributing.md  devnotes.md  hybrid_additive.drawio  index.md  package-lock.json  package.json  use-cases.md
docs/client/: dag-interactive.md  evaluation.md  explore-dags.md  explore_resolutions.md  install.md  link-data.md  look-up.md  query-data.md
docs/migration/: pre-0.10-to-0.10.md
docs/server/: api.md  cli.md  concepts.md  deploy.md  install.md  risks.md
docs/src/: contributing.md  index.md
docs/stylesheets/: extra.css
environments/: containers.env  datadog-agent-private-sample.env  datadog-agent-public.env  datadog-sample.env  datadog.env  dev_docker.env  dev_local.env  development.env  sample.env  sample_client.env  sample_server.env  server.env
models/: .gitignore
notebooks/: WH_SplinkEG.ipynb  WL-scratch.ipynb  WL_CHxExp.ipynb  WL_blocktopus-matching.ipynb  WL_cleaningfunction.ipynb  WL_compatibility-tests.ipynb  WL_deterministic-tests.ipynb  WL_duckdb-debug.ipynb  WL_existing-service.ipynb  WL_existingcms-tests.ipynb  WL_hybridadd-matching.ipynb  WL_linker-matching.ipynb  WL_live-matching.ipynb  WL_pred-to-prod.ipynb  WL_prob2clus.ipynb  WL_prob2clus_2.ipynb  WL_splink-iterpred.ipynb  WL_splink-physical.ipynb  WL_splink-s3.ipynb  WL_splink-tests-2.ipynb  WL_splink-tests.ipynb  cluster.py  compress.ipynb  hierarchical.ipynb  sample.ipynb
notebooks/archive/: WL-scratch.ipynb  WL_deduper.ipynb  WL_dtypemap.ipynb  WL_duckdb-debug.ipynb  WL_exceptions.ipynb  WL_existing-service.ipynb  WL_existingcms-tests.ipynb  WL_linker-matching.ipynb  WL_pred-to-prod.ipynb  WL_profilewrite.ipynb  WL_selector.ipynb  WL_splink-iterpred.ipynb  WL_splink-s3.ipynb  WL_splink-tests-2.ipynb  WL_splink-tests.ipynb  WL_test.ipynb  sample.ipynb
notebooks/engineering/: WL_CC.ipynb  WL_cleaning_test_2.ipynb  WL_compatibility-tests.ipynb  WL_prob2clus_2.ipynb  WL_query.ipynb
notebooks/models/: WL_deterministic-tests.ipynb  WL_hybridadd-matching.ipynb  WL_live-matching.ipynb
outputs/: .gitignore
references/: METHODOLOGY.md  README_aspitational.md  design.md  devnotes.md  hybrid_additive.drawio
src/: config.py
src/data/: clusters.py  data.py  datasets.py  dims.py  get_datasets.py  make_dataset.py  prepare_duckdb.py  probabilities.py  star.py  utils.py  validation.py
src/dim/: dit_export_wins__wins_dataset.py  hmrc_trade__exporters.py  make_dim.py
src/eval/: make_eval.py
src/features/: clean_basic.py  clean_basic_original.py  clean_complex.py  utils.py
src/link/: companieshouse_companies_x_hmrc_trade__exporters.py  deterministic_linker.py  existingservice_linker.py  link.py  linker.py  make_link.py  splink_linker.py
src/matchbox/: __init__.py  _version.py  admin.py  datasets.toml
src/models/: evaluation.py  model_predict.py  model_train.py  predict.py  train.py  utils.py
src/visualisation/: company_matching_erg.drawio  utils.py
test/: __init__.py  clusters.csv  conftest.py  justfile  pipeline.py  probabilities.csv  test_cleaning.py  test_clusters.py  test_clusters2.py  test_db.py  test_dedupers.py  test_example.py  test_features.py  test_helpers.py  test_linkers.py  test_utils.py  utils.py  validate.csv
test/client/: test_admin.py  test_cleaning.py  test_dags.py  test_dedupers.py  test_eval.py  test_extract.py  test_handler.py  test_helpers.py  test_hierarchy.py  test_linkers.py  test_locations.py  test_model.py  test_models.py  test_queries.py  test_resolvers.py  test_results.py  test_sources.py  test_transform.py  test_utils.py  test_visualisation.py  test_warehouse.py
test/common/: __init__.py  test_dto.py  test_eval.py  test_factories.py  test_graph.py  test_hash.py  test_results.py  test_sources.py  test_transform.py
test/data/: all_companies.csv
test/e2e/: test_e2e.py  test_e2e_analytical.py  test_e2e_cli.py  test_e2e_dag.py  test_e2e_evaluation.py  test_e2e_methodologies.py
test/fixtures/: __init__.py  client.py  data.py  db.py  eval.py  factories.py  graph.py  models.py
test/masked_t3_e2/: probabilities.csv
test/masked_t3_e3/: probabilities.csv
test/models_a_t3_e2/: clusters.csv  models_a_t3_e2.md
(+416 files in other folders)
