[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "company-matching-framework"
version = "0.1.0"
description = "A framework for orchestrating and comparing various company matching methodologies."
authors = [{ name = "DDaTDataScienceTeam" }]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">3.8"
dependencies = [
    "click",
    "matplotlib",
    "pandas",
    "pyarrow > 14.9",
    "python-dotenv",
    "sqlalchemy",
    "splink",
    "duckdb",
    "altair",
    "psycopg2-binary",
    "pydantic",
    "rustworkx",
    "tomli",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "testing.postgresql",
    "ipykernel",
    "pytest-env"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
# Ruff defaults mostly taken from https://docs.astral.sh/ruff/configuration/
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    # "D"
]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
ignore-init-module-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/{test,docs}/*" = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-s -vv --cov=cmf test/"
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pytest_env]
SCHEMA = "test"
BATCH_SIZE = "400"
